# ComfyUI_Preview_Selector

./: README-ja.md  README.md  __init__.py  nf_preview_selector.py  pyproject.toml
js/: floating_window.css  floating_window.js  nf_preview_selector.js  preview_dialog.js
