[project]
name = "ComfyUI_Preview_Selector"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/NyaFuP/ComfyUI_Preview_Selector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nyafu"
DisplayName = "ComfyUI_Preview_Selector"
Icon = ""
