[project]
name = "Preview_Selector"
description = "A floating dialog-based image preview and selection system for ComfyUI."
version = "1.2.7"
license = {file = "LICENSE"}


[project.urls]
Repository = "https://github.com/NyaFuP/ComfyUI_Preview_Selector"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nyafu"
DisplayName = "NF Preview Selector"
Icon = ""
